Updated some alignments and fixed some things

--- a/main.css
+++ b/main.css
@@ -1,147 +1,102 @@
-/*General Set-Up*/
-html{
-    height: 100%;
-}
-
 body {
-    position: relative;
+/*    position: relative;*/
     margin: 0;
-    min-height: 100%;
+		width: 100%;
+/*    min-height: 100%;*/
     font-family: "Lucinda Console", Consolas, monospace;
     background-color: #ffffff;
 }
 
 /*Nav Bar (Help from CodePen: http://codepen.io/macsupport/pen/bKFzD*/
-.navbar, .navbar-default {
+.navbar-nav, .navbar-default {
 	border-radius: 0;
 	border: none;
-	margin-bottom: 0px;
-	min-height: 70px;
-    background-color: white;
-}
-
-.navbar-default .navbar-nav {
-/*    display: inline-flex;*/
-/*    align-items: center;*/
-    float: right;
-    margin-top: 20px;
+	margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    background-color: white; 
 }
 
 .navbar-toggle {
-    margin-top: 20px;
+    margin-top: 16px;
 }
 
 .navbar-brand {
-    margin-top: 0px;
-}
-
-.navbar-header {
-    margin-bottom: 30px;
+    margin-top: 10px;
+    padding: 0;
 }
 
 .navbar-default .navbar-nav > li > a {
 	font-size: 18px;
 	font-weight: 300;
-    text-decoration: none;
+/*    text-decoration: none;*/
+    text-align: right;
 }
 
-.navbar-default .navbar-nav > li > a:hover {
+.navbar-nav {
+    float: right;
+}
+
+.navbar-nav > li:hover,
+.navbar-nav > li:focus {
 	color: #444444;
-	transition: 0.5s all linear;
+	transition: 0.5s ease;
 	height: 100%;
+/*    background-color: #ccc;*/
+    color: #ffffff;
 }
 
- .navbar-default .navbar-nav > .active > a, 
- .navbar-default .navbar-nav > .active > a:hover, 
- .navbar-default .navbar-nav > .active > a:focus {
-      color: #444444;
-      background: #ffffff;
- }
-
-#logo {
-    display: inline-flex;
-    float: left;
-    padding: 0px 0px 10px 10px;
-    margin-top: 0px;
-    
-}
-
-@media (max-width: 600px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
+@media screen and (min-width:768px) {
+/*
     .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
+        float: left;
     }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-/*     since 3.1.0 */
-    .navbar-collapse.collapse.in { 
-        display: block!important;
-    }
-    .collapsing {
-        overflow: hidden!important;
-    }
+*/
     
-    
+    .navbar-default .navbar-nav > li > a {
+        font-size: 18px;
+        font-weight: 300;
+        text-decoration: none;
+    }
 }
 
 /*Homepage Jumbotron Set-Up*/
 .jumbotron {
     display: flex;
+    margin: 0;
     align-items: center;
-    background-image: url("/images/uncommon17.jpg");
+    background-color: rgba(178, 0, 58, 0.7);
+    background-image: url("./images/uncommon17.jpg");
+    opacity: 0.8;
     background-size: cover;
-    background-blend-mode: multiply;
     color: #ffffff;
     height: 600px;
     text-shadow: 0.70px 0.70px 0.70px #000000;
     text-align: center;
-    margin-top: 10px;
 }
 
 .jumbotron h1 {
-    font-size: 90px;
+    font-size: 7rem;
     font-weight: bolder;
     text-align: center;
-    margin-top: 5px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 5px;
-    padding-left:15px;
-    padding-right: 15px;
+/*    margin-top: 5px;*/
+/*    margin-left: 20px;*/
+/*    margin-right: 20px;*/
+/*    margin-top: 5px;*/
+/*    padding-left:15px;*/
+/*    padding-right: 15px;*/
     color: #ffffff;
 }
 
 .jumbotron h2 {
-    font-size: 32px;
+/*    font-size: 30px;*/
     text-align: center;
-    margin-top: 5px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 5px;
-    padding-left:20px;
-    padding-right: 20px;
+/*    margin-top: 5px;*/
+/*    margin-left: 20px;*/
+/*    margin-right: 20px;*/
+/*    margin-top: 5px;*/
+/*    padding-left:20px;*/
+/*    padding-right: 20px;*/
     color: #ffffff;
 }
 
@@ -162,7 +117,7 @@ section .container {
 
 .content {
     text-align: left;
-    font-size: 16px; 
+    font-size: 16px;
     margin-bottom: 20px;
     margin-left: 20px;
     margin-right: 20px;
@@ -172,46 +127,37 @@ section .container {
     margin-bottom: 20px;
 }
 
-.social_media_icons {
-    display: flex;
-    justify-content: center;
-    background-size: cover;
-    
-}
-
-.icon_list {
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 30px;
-}
-
-.icon_list li img {
+.icon {
     width: 47px;
     height: 47px;
-    margin: 10px 10px 10px 10px;
 }
 
 
 /*General Footer*/
 footer {
     display: flex;
-    justify-content: flex-start;
-    background-size: cover;
-    position: relative;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    padding: .2rem;
+		margin-top: 1em;
 }
 
 footer p {
-    position: relative;
+    position: absolute;
     text-align: left;
     font-size: 12px;
 }
 
+.name h1 {
+    text-shadow: black 5px 5px 3px;
+}
+
+.name h2 {
+    text-shadow: black 3px 3px 1px;
+}
 
 
+.name {
+    margin: auto;
+}
 
+ul {
+    float: left;
+}
